# speakerpy

./: .dockerignore  .gitignore  Dockerfile  Habr.md  Makefile  README.md  pyproject.toml
docs/docs/: Makefile
docs/docs/source/: conf.py  index.rst  index.txt
docs/source/: conf.py
speakerpy/: __main__.py  lib_helper.py  lib_sl_text.py  lib_speak.py
