[tool.poetry]
name = "speakerpy"
version = "0.1.2"
description = "`SpeakerPy` - это Python-библиотека для синтеза речи, основанная на моделях Silero Text-to-Speech."
authors = ["Denis Kustov <pro-progerkustov@yandex.ru>"]
readme = "README.md"
homepage = "https://github.com/denisxab/speakerpy"
repository = "https://github.com/denisxab/speakerpy"
keywords=[
    "синтез речи"
    ,"text-to-speech"
    ,"озвучивание текста"
    ,"python"
    ,"Silero"
    ,"TTS"
    ,"аудио"
    ,"голос"
    ,"синтезатор голоса"
    ,"чтение текста"
    ,"оффлайн TTS"
    ,"мультиязычный TTS"
    ,"преобразование текста в речь"
    ,"генерация речи"
    ,"аудиокниги"
]

[tool.poetry.dependencies]
python = "^3.10"
silero = "^0.4.1"
sounddevice = "^0.4.6"
num2words = "^0.5.12"
transliterate = "^1.10.2"
soundfile = "^0.12.1"
pydub = "^0.25.1"
tqdm = "^4.65.0"
nltk = "^3.8.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
